--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -12,12 +12,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3cd2887e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e8c54907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 224, 3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imread(\"./train_data/10_10_13_25_.png\").shape"
    ]
   },
   {
