--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -877,17 +877,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "fc8aeffe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"./Att_ocr/data/unique_char.txt\")"
+    "f = open(\"./data/unique_char.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "a9740557",
    "metadata": {},
    "outputs": [],
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "1105c31e",
    "metadata": {},
    "outputs": [],
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "4c3ebef6",
    "metadata": {},
    "outputs": [],
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "445f9fcd",
    "metadata": {},
    "outputs": [
@@ -958,13 +958,10 @@
        " '30': 'श',\n",
        " '31': 'ष',\n",
        " '32': 'स',\n",
-       " '33': 'ह',\n",
-       " '34': 'क्ष',\n",
-       " '35': 'त्र',\n",
-       " '36': 'ज्ञ'}"
+       " '33': 'ह'}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "e3fde955",
    "metadata": {},
    "outputs": [],
@@ -985,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "5dece7c1",
    "metadata": {},
    "outputs": [],
